# platoengine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  PlatoEngineConfig.cmake.in  README.md
apps/: CMakeLists.txt  Plato_TemplateMain.hpp
apps/esp/: CMakeLists.txt  PlatoESPApp.cpp  PlatoESPApp.hpp  PlatoESPPythonModule.cpp  PlatoESP_main.cpp
apps/ksal_proxy/: CMakeLists.txt  KsalProxyMain.cpp  Plato_KsalProxyApp.hpp
apps/proxy/: CMakeLists.txt  StructuralTopologyOptimizationProxyMain.cpp
apps/python_interpreter/: CMakeLists.txt  CriterionGradientOperation.cpp  CriterionGradientOperation.hpp  CriterionValueOperation.cpp  CriterionValueOperation.hpp  PlatoPythonApp.cpp  PlatoPythonApp.hpp  PlatoPythonOperation.cpp  PlatoPythonOperation.hpp  PlatoPython_main.cpp  PythonAppUtilities.cpp  PythonAppUtilities.hpp  PythonOperationFactory.cpp  PythonOperationFactory.hpp  RunVoidFunctionOperation.cpp  RunVoidFunctionOperation.hpp
apps/python_interpreter/unittest/: CMakeLists.txt  Plato_Test_PythonApp.cpp  import_functions.py  numpy_functions.py  test_functions.py
apps/rocket/: CMakeLists.txt  Plato_RocketDesignApp.cpp  Plato_RocketDesignApp.hpp  RocketDesignMain.cpp
apps/rosenbrock/: CMakeLists.txt  LinearOperationMain.cpp  Plato_LinearOperationApp.cpp  Plato_LinearOperationApp.hpp  Plato_RosenbrockApp.hpp  RosenbrockMain.cpp
apps/services/: CMakeLists.txt  PlatoApp.cpp  PlatoApp.hpp  Plato_Main.cpp  Plato_Services.cpp  ServicesPythonModule.cpp
apps/services/matlab/: top.m
apps/services/python/: CMakeLists.txt  exodus.py
apps/services/unittest/: CMakeLists.txt  PSL_Test_AMFilterUtilities.cpp  PSL_Test_AbstractAuthority.cpp  PSL_Test_BasicDenseVectorOperations.cpp  PSL_Test_BoundarySupportPoint.cpp  PSL_Test_BoundingBox.cpp  PSL_Test_BoundingBoxMortonHierarchy.cpp  PSL_Test_BoundingBoxSearches.cpp  PSL_Test_CompressedRowSparseMatrixBuilder.cpp  PSL_Test_CompressedRowSparseMatrixImplementation.cpp  PSL_Test_ConjugateGradient.cpp  PSL_Test_DenseMatrixBuilder.cpp  PSL_Test_DenseMatrixImplementation.cpp  PSL_Test_FixedRadiusNearestNeighborsSearches.cpp  PSL_Test_FreeHelpers.cpp  PSL_Test_GlobalUtilities.cpp  PSL_Test_GradientCheck.cpp  PSL_Test_KernelFilter.cpp  PSL_Test_KernelThenHeavisideFilter.cpp  PSL_Test_KernelThenTANHFilter.cpp  PSL_Test_Mesh.cpp  PSL_Test_MeshScaleAgent.cpp  PSL_Test_MpiWrapperImplementation.cpp  PSL_Test_MpiWrapperInterface.cpp  PSL_Test_NearestNeighborSearches.cpp  PSL_Test_OrthogonalGridUtilities.cpp  PSL_Test_OverhangFilter.cpp  PSL_Test_ParallelExchanger.cpp  PSL_Test_ParameterData.cpp  PSL_Test_Point.cpp  PSL_Test_Random.cpp  PSL_Test_RegularHex8.cpp  PSL_Test_Standardization.cpp  PSL_Test_TetMeshUtilities.cpp  PSL_Test_Triangle.cpp  PSL_Test_Vector.cpp  ParseUnitTestStrings.hpp  Plato_PhysicsProxyApp.cpp  Plato_PhysicsProxyApp.hpp  Plato_PlatoProxyApp.cpp  (+23 more)
apps/statics/: CMakeLists.txt  main.cpp
apps/xtk/: CMakeLists.txt  Plato_XTK_Application.cpp  Plato_XTK_Application.hpp  Plato_XTK_Local_Op.hpp  Plato_XTK_Local_Op_Compute_Bounds.cpp  Plato_XTK_Local_Op_Compute_Bounds.hpp  Plato_XTK_Local_Op_Generate_Model.cpp  Plato_XTK_Local_Op_Generate_Model.hpp  Plato_XTK_Local_Op_Load_From_Hdf5.cpp  Plato_XTK_Local_Op_Load_From_Hdf5.hpp  Plato_XTK_Local_Op_Save_To_Hdf5.cpp  Plato_XTK_Local_Op_Save_To_Hdf5.hpp  Plato_XTK_Local_Op_Sensitivity.cpp  Plato_XTK_Local_Op_Sensitivity.hpp  Plato_XTK_SharedData.hpp  XTK_Main.cpp  XTK_Main_Standalone.cpp
apps/xtk/unittest/: CMakeLists.txt  Plato_Test_XTK_Application.cpp  UnitMainXTK.cpp  ut_xtk_bolted_bracket.exo  xtkApp.xml  xtkInput.xml
base/: CMakeLists.txt
base/config/: config.cmake.var  defaults.cmake  integration_tests_dir.cmake  nightly_config.cmake  prebuilt_binaries.cmake  tools.cmake
base/doc/: index.dox  plato.doxyfile
base/src/DecomposeMesh/: CMakeLists.txt  Plato_DecomposeMesh.cpp  Plato_DecomposeMesh.hpp
base/src/Filters/: CMakeLists.txt  PlatoEngine_AbstractFilter.cpp  PlatoEngine_AbstractFilter.hpp  PlatoEngine_AbstractKernelThenFilter.cpp  PlatoEngine_AbstractKernelThenFilter.hpp  PlatoEngine_AbstractProjectionFilter.cpp  PlatoEngine_AbstractProjectionFilter.hpp  PlatoEngine_FilterFactory.cpp  PlatoEngine_FilterFactory.hpp  PlatoEngine_IdentityFilter.cpp  PlatoEngine_IdentityFilter.hpp  PlatoEngine_KernelFilter.cpp  PlatoEngine_KernelFilter.hpp  PlatoEngine_KernelThenAMFilter.hpp  PlatoEngine_KernelThenHeavisideFilter.cpp  PlatoEngine_KernelThenHeavisideFilter.hpp  PlatoEngine_KernelThenStructuredAMFilter.cpp  PlatoEngine_KernelThenStructuredAMFilter.hpp  PlatoEngine_KernelThenTANHFilter.cpp  PlatoEngine_KernelThenTANHFilter.hpp  PlatoEngine_ProjectionHeavisideFilter.cpp  PlatoEngine_ProjectionHeavisideFilter.hpp  PlatoEngine_ProjectionTANHFilter.cpp  PlatoEngine_ProjectionTANHFilter.hpp
base/src/MarkFaces/: CMakeLists.txt  MarkFaces.cpp  MarkFaces.hpp  MarkFaces_Main.cpp
base/src/PlatoSubproblemLibraryInterface/: CMakeLists.txt  PSL_InterfaceToEngine_OptimizationMesh.cpp  PSL_InterfaceToEngine_OptimizationMesh.hpp  PSL_InterfaceToEngine_ParameterDataBuilder.cpp  PSL_InterfaceToEngine_ParameterDataBuilder.hpp
base/src/Su2ToExodus/: CMakeLists.txt  Su2ToExodus.cpp  Su2ToExodus.hpp  Su2ToExodus_Main.cpp  Su2ToExodus_bak.cpp  Su2ToExodus_bak.hpp
base/src/analyze/: CMakeLists.txt  bc.hpp  communicator.cpp  communicator.hpp  data_container.cpp  data_container.hpp  data_mesh.cpp  data_mesh.hpp  exception_handling.cpp  exception_handling.hpp  exodus_io.cpp  lightmp.cpp  lightmp.hpp  linear_elastic.cpp  linear_elastic.hpp  material_container.cpp  material_container.hpp  math_library.cpp  math_library.hpp  matrix_container.cpp  matrix_container.hpp  mesh_io.cpp  mesh_io.hpp  mesh_services.cpp  mesh_services.hpp  nemesis_io.cpp  solid_statics.cpp  solid_statics.hpp  topological_element.cpp  topological_element.hpp  types.hpp
base/src/dakota/: CMakeLists.txt  Plato_DakotaAppInterface.cpp  Plato_DakotaAppInterface.hpp  Plato_DakotaAppInterfaceUtilities.cpp  Plato_DakotaAppInterfaceUtilities.hpp  Plato_DakotaDataMap.cpp  Plato_DakotaDataMap.hpp  (+1 more)
functional/plato/: CMakeLists.txt
(+877 files in other folders)
