
add_subdirectory(src/tools)
add_subdirectory(src/analyze)
add_subdirectory(src/data_layer)
add_subdirectory(src/Filters)
add_subdirectory(src/interface)
add_subdirectory(src/models)
add_subdirectory(src/linear_algebra)
add_subdirectory(src/stochastic)
add_subdirectory(src/optimize)
add_subdirectory(src/proxy)
add_subdirectory(src/PlatoSubproblemLibrary/Agent)
add_subdirectory(src/PlatoSubproblemLibraryInterface)
add_subdirectory(src/PlatoSubproblemLibrary/SpatialSearching)
add_subdirectory(src/PlatoSubproblemLibrary/AbstractInterface)
add_subdirectory(src/PlatoSubproblemLibrary/BoundedSupportFunction)
add_subdirectory(src/PlatoSubproblemLibrary/Example)
add_subdirectory(src/PlatoSubproblemLibrary/Filter)
add_subdirectory(src/PlatoSubproblemLibrary/Geometry)
add_subdirectory(src/PlatoSubproblemLibrary/Helper)
add_subdirectory(src/PlatoSubproblemLibrary/ParameterData)
add_subdirectory(src/input_checkers)
add_subdirectory(src/input_generator)
add_subdirectory(src/operations)
add_subdirectory(src/Su2ToExodus)
add_subdirectory(src/MarkFaces)

if( UNIT_TESTING )
  add_subdirectory(src/test_utilities)
endif()

if( ENABLE_ISO )
  add_subdirectory(src/iso)
endif()

if( ENABLE_PRUNE )
  add_subdirectory(src/prune/main)
  add_subdirectory(src/prune)
endif()

if( ESP_ENABLED )
  add_subdirectory(src/geometry/ESP)
endif()

if( DAKOTADRIVER )
  add_subdirectory(src/dakota)
endif()

if( STK_ENABLED )
  add_subdirectory(src/support_structure)
  add_subdirectory(src/support_structure/main)
  add_subdirectory(src/DecomposeMesh)
endif()
